--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,7 @@ plugins {
     id 'maven-publish'
 }
 
-//group = 'me.munchii'
-group = 'com.github.munchii'
+group = 'me.munchii'
 version = '1.20.1-1.1'
 
 repositories {
