--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,17 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    flatDir {
+        dirs 'lib'
+    }
 }
 
 dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
-    compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
+    //compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
     compileOnly "org.spigotmc:spigot:1.20.2-R0.1-SNAPSHOT"
-    compileOnly "org.spigotmc:minecraft-server:1.20.2-R0.1-SNAPSHOT"
+    //compileOnly "org.spigotmc:minecraft-server:1.20.2-R0.1-SNAPSHOT"
+    compileOnly fileTree(dir: 'lib', include: '*.jar')
 }
 
 def targetJavaVersion = 17
