--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
-    //compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
-    compileOnly "org.spigotmc:spigot:1.20.2-R0.1-SNAPSHOT"
+    compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
+    //compileOnly "org.spigotmc:spigot:1.20.2-R0.1-SNAPSHOT"
     //compileOnly "org.spigotmc:minecraft-server:1.20.2-R0.1-SNAPSHOT"
     compileOnly fileTree(dir: 'lib', include: '*.jar')
 }
