--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'me.munchii'
-version = '1.20.1-1.1'
+version = '1.20.2-1.2'
 
 repositories {
     mavenCentral()
@@ -24,9 +24,10 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
+    // commons-io version 20030203.000550 does not have FileUtils.readFileToString
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+
     compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
-    //compileOnly "org.spigotmc:spigot:1.20.2-R0.1-SNAPSHOT"
-    //compileOnly "org.spigotmc:minecraft-server:1.20.2-R0.1-SNAPSHOT"
     compileOnly fileTree(dir: 'lib', include: '*.jar')
 }
 
