--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,14 @@ processResources {
         expand props
     }
 }
+
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'me.munchii'
+            artifactId = 'igloolib'
+            version = '1.20.2-1.2'
+        }
+    }
+}
