--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     // commons-io version 20030203.000550 does not have FileUtils.readFileToString
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
-    compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
+    //compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
     compileOnly fileTree(dir: 'lib', include: '*.jar')
 }
 
@@ -39,6 +39,7 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
+    withSourcesJar()
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -60,9 +61,13 @@ processResources {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            groupId = 'me.munchii'
+            groupId = 'com.github.Dmunch04'
             artifactId = 'igloolib'
             version = '1.20.2-1.3'
         }
     }
+}
+
+wrapper {
+    distributionType = DistributionType.ALL
 }
