--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     // commons-io version 20030203.000550 does not have FileUtils.readFileToString
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
-    //compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
+    compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
     compileOnly fileTree(dir: 'lib', include: '*.jar')
 }
 
