--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,11 @@ api-version: '1.20'
 load: STARTUP
 authors: [munchii]
 description: plugin library for spigot/paper
+commands:
+  igloo:
+    description: Main command
+    usage: /igloo
+    permission: igloolib.admin
+  test:
+    description: a
+    usage: b
